@@ -87,12 +87,10 @@
   get_attribute_from_list/4,
   get_attribute/3,
   get_attribute/4,
-
   get_attribute_as_binary/3,
   get_attribute_as_binary/4,
   get_attribute_from_list_as_binary/3,
   get_attribute_from_list_as_binary/4,
-
   set_attribute_in_list/2,
   set_attribute_in_list/3,
   set_attribute_in_list/4,
@@ -949,22 +947,15 @@ get_attribute(#xmlel{attrs = Attrs} = _XML_Element, NS, Name, Default) ->
 get_attribute(undefined, _NS, _Name, Default) ->
     Default.
 
+%% @spec (Attrs, Attr_Name, Default) -> Attr_Value | Default
+%%     Attrs = [xmlnsattribute() | xmlattribute()]
+%%     Attr_Name = atom() | string()
+%%     Default = term()
+%%     Attr_Value = binary()
+%% @doc Return the value of the attribute named `Attr_Name' from the list.
+%%
+%% Return `Default' if the attribute isn't found.
 
-get_attribute_as_binary(#xmlel{attrs = Attrs} = _XML_Element, Name, Default) ->
-    get_attribute_from_list_as_binary(Attrs, Name, Default);
-get_attribute_as_binary(undefined, _Name, Default) ->
-    Default.
-get_attribute_as_binary(#xmlel{attrs = Attrs} = _XML_Element, NS, Name, Default) ->
-    get_attribute_from_list_as_binary(Attrs, NS, Name, Default);
-get_attribute_as_binary(undefined, _NS, _Name, Default) ->
-    Default.
-get_attribute_from_list_as_binary(Attrs, NS, Attr_Name, Default) ->
-    case get_attribute_node_from_list(Attrs, NS, Attr_Name) of
-        #xmlattr{value = Value} ->
-            Value;
-        _ ->
-            Default
-    end.
 get_attribute_from_list_as_binary(Attrs, Attr_Name, Default) ->
     case get_attribute_node_from_list(Attrs, Attr_Name) of
         #xmlattr{value = Value} ->
@@ -974,6 +965,57 @@ get_attribute_from_list_as_binary(Attrs, Attr_Name, Default) ->
         _ ->
             Default
     end.
+
+%% @spec (Attrs, NS, Attr_Name, Default) -> Attr_Value | Default
+%%     Attrs = [xmlnsattribute()]
+%%     NS = atom() | string()
+%%     Attr_Name = atom() | string()
+%%     Default = term()
+%%     Attr_Value = binary()
+%% @doc Return the value of the attribute named `Attr_Name' from the
+%% list with the `NS' namespace URI.
+%%
+%% Return `Default' if the attribute isn't found.
+
+get_attribute_from_list_as_binary(Attrs, NS, Attr_Name, Default) ->
+    case get_attribute_node_from_list(Attrs, NS, Attr_Name) of
+        #xmlattr{value = Value} ->
+            Value;
+        _ ->
+            Default
+    end.
+
+%% @spec (XML_Element, Attr_Name, Default) -> Attr_Value | Default
+%%     XML_Element = xmlel() | undefined
+%%     Attr_Name = atom() | string()
+%%     Default = term()
+%%     Attr_Value = binary()
+%% @doc Return the value of the attribute named `Attr_Name'.
+%%
+%% Return `Default' if the attribute isn't found.
+
+get_attribute_as_binary(#xmlel{attrs = Attrs} = _XML_Element, Name,
+  Default) ->
+    get_attribute_from_list_as_binary(Attrs, Name, Default);
+get_attribute_as_binary(undefined, _Name, Default) ->
+    Default.
+
+%% @spec (XML_Element, NS, Attr_Name, Default) -> Attr_Value | Default
+%%     XML_Element = xmlel() | undefined
+%%     NS = atom() | string()
+%%     Attr_Name = atom() | string()
+%%     Default = term()
+%%     Attr_Value = binary()
+%% @doc Return the value of the attribute named `Attr_Name' with the
+%% `NS' namespace URI.
+%%
+%% Return `Default' if the attribute isn't found.
+
+get_attribute_as_binary(#xmlel{attrs = Attrs} = _XML_Element, NS, Name,
+  Default) ->
+    get_attribute_from_list_as_binary(Attrs, NS, Name, Default);
+get_attribute_as_binary(undefined, _NS, _Name, Default) ->
+    Default.
 
 %% @spec (Attrs, Attr_Name) -> bool()
 %%     Attrs = [xmlattribute() | xmlattribute()]
@@ -1168,7 +1210,8 @@ set_attribute(XML_Element, Name, Value) when is_integer(Value) ->
 set_attribute(XML_Element, Name, Value) when is_list(Value) ->
     set_attribute(XML_Element, Name, list_to_binary(Value));
 
-set_attribute(#xmlel{attrs = Attrs} = XML_Element, Name, Value) when is_binary(Value)->
+set_attribute(#xmlel{attrs = Attrs} = XML_Element, Name, Value)
+  when is_binary(Value)->
     New_Attrs = set_attribute_ns2(Attrs, Name, Value, []),
     XML_Element#xmlel{attrs = New_Attrs};
 
@@ -1208,14 +1251,16 @@ set_attribute2([], Name, Value, New_Attrs) ->
 %% with the same name and the `NS' namespace URI.
 
 set_attribute(XML_Element, NS, Name, Value) when is_atom(Value) ->
-    set_attribute(XML_Element, NS, Name, list_to_binary(atom_to_list(Value)));
+    set_attribute(XML_Element, NS, Name,
+      list_to_binary(atom_to_list(Value)));
 set_attribute(XML_Element, NS, Name, Value) when is_integer(Value) ->
-    set_attribute(XML_Element, NS, Name, list_to_binary(integer_to_list(Value)));
+    set_attribute(XML_Element, NS, Name,
+      list_to_binary(integer_to_list(Value)));
 set_attribute(XML_Element, NS, Name, Value) when is_list(Value) ->
     set_attribute(XML_Element, NS, Name, list_to_binary(Value));
 
 set_attribute(#xmlel{attrs = Attrs} = XML_Element, NS, Name, Value) 
-        when is_binary(Value)->
+  when is_binary(Value)->
     New_Attrs = set_attribute_ns2(Attrs, NS, Name, Value, []),
     XML_Element#xmlel{attrs = New_Attrs}.
 
