@@ -16,6 +16,8 @@
 	errors from control specially. Reformulate a comment more positively.
 	Style.
 
+	* src/core/exmpp_xml.erl: Add documentation to new functions. Style.
+
 2009-01-09  Pablo Polvorin  <pablo.polvorin@process-one.net>
 
 	* src/core/exmpp_stanza.erl: get_type/1, get_lang/1 and get_id/1
